# flipper-blinds

./: .gitignore  Cargo.toml  application.fam  deploy.py  pyproject.toml  rust-toolchain.toml  somfy_blinds.js  somfy_protocol.c  somfy_protocol.h  somfy_rts.c  somfy_rts.h  somfy_storage.c  somfy_storage.h
.cargo/: config.toml
docs/plans/: 2026-02-23-rust-flipper-app-design.md  2026-02-23-rust-flipper-hello-world.md  2026-02-23-rust-port-design.md  2026-02-23-rust-port-implementation.md  2026-02-23-somfy-rts-controller-design.md  2026-02-23-somfy-rts-implementation.md
rust/: Cargo.toml
rust/src/: .protocol.rs.swp  main.rs  protocol.rs  subghz.rs
scenes/: somfy_scene.h  somfy_scene_add_blind.c  somfy_scene_confirm_remove.c  somfy_scene_control.c  somfy_scene_main_menu.c  somfy_scene_transmit.c
src/: main.rs  storage.rs  subghz.rs
