cargo-features = ["different-binary-name"]

[package]
name = "somfy-blinds-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "somfy-blinds-rust"
filename = "somfy_blinds.fap"
bench = false
test = false

[dependencies]
flipperzero = "0.16.0"
flipperzero-sys = "0.16.0"
flipperzero-rt = "0.16.0"
heapless = "0.9"
